package switchtwentytwenty.project.domain.account;

import switchtwentytwenty.project.AggregateRoot;

public interface Account extends AggregateRoot {

}
